--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.servlet.context-path=/api
-
+error.handling.codes.CompanyExistsConstraint=COMPANY_NOT_FOUND
+error.handling.codes.GroupingExistsConstraint=GROUPING_NOT_FOUND
 db.serviceClassId=4601
 db.groupingClassId=4613
 db.companyClassIdList=4617,4625,4634
 
-spring.docker.compose.enabled=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
-spring.datasource.username=user
-spring.datasource.password=password
+#spring.docker.compose.enabled=false
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db
+#spring.datasource.username=user
+#spring.datasource.password=password
