Correct creation of new relations by including correct class_id and id_rel generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 server.servlet.context-path=/api
 error.handling.codes.CompanyExistsConstraint=COMPANY_NOT_FOUND
 error.handling.codes.GroupingExistsConstraint=GROUPING_NOT_FOUND
-db.serviceClassId=4601
-db.groupingClassId=4613
-db.companyClassIdList=4617,4625,4634
+error.handling.codes.SingleCompanyRelationConstraint=COMPANY_GROUPING_RELATION_NOT_UNIQUE
+error.handling.codes.CompanyRelationExistsConstraint=COMPANY_GROUPING_RELATION_NOT_FOUND
 
+db.serviceClassId=4601
+#????????? ??? ???, ????????? ??? ???, ????????? ?????
+#TODO ????????? ?????????? ??????????????
+db.groupingClassIdList=4613,4617,4633
+db.companyClassIdList=4625,4617,4635
+
+#?????????? docker-???????
 #spring.docker.compose.enabled=false
 #spring.datasource.url=jdbc:postgresql://localhost:5432/db
 #spring.datasource.username=user
