--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ error.handling.codes.SingleCompanyRelationConstraint=COMPANY_GROUPING_RELATION_N
 error.handling.codes.CompanyRelationExistsConstraint=COMPANY_GROUPING_RELATION_NOT_FOUND
 
 db.serviceClassId=4601
-#????????? ??? ???, ????????? ??? ???, ????????? ?????
-#TODO ????????? ?????????? ??????????????
+#Storonnie KAS ANT, Servisniye KAS ANT, Storonnie KASAT
+#TODO fix id lists
 db.groupingClassIdList=4613,4617,4633
 db.companyClassIdList=4625,4617,4635
 
-#?????????? docker-???????
+#Disabling docker-plugin
 #spring.docker.compose.enabled=false
 #spring.datasource.url=jdbc:postgresql://localhost:5432/db
 #spring.datasource.username=user
